# sqq

./: .gitignore  README.md  SQQ_design_CN.docx  SQQ_design_EN.docx  __main__.py  config.py  models.py  pipeline.py  pyproject.toml
.github/workflows/: publish-pypi.yml
core/: cage.py  cup.py  ice.py
docs/: design.md  update.md
example/gro/: test2.gro
io/: __init__.py
sqq/: __init__.py  __main__.py  banner.py  cli.py  config.py  display.py  gro_batch.py  models.py  parallel.py  pipeline.py
sqq/core/: __init__.py  cage.py  cpp_backend.py  dhop.py  f3f4.py  geometry.py  graph.py  hydrate_cluster.py  ice.py  mcg.py  pbc.py  quasi_cage.py  ring.py  ring_topology.py  selection.py  spatial.py
sqq/core/sqq-cpp/: CMakeLists.txt
sqq/core/sqq-cpp/include/sqq_cpp/: core.hpp
sqq/core/sqq-cpp/src/: core.cpp  python_bindings.cpp
sqq/example/gro/: test1.gro
sqq/io/: gro_grouping.py  gro_writer.py  lammps.py  occupancy.py  summary.py  trajectory.py  vmd.py
tests/: test_cage_report_scope.py  test_graph_ice.py  test_hydrate_cluster.py  test_q6.py  test_ring_cup.py
